# amar

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
data/: canon.toml
data/lore/: calendar.md  character.md  combat.md  crits_fumbles.md  kingdom.md  magic.md  mythology.md  world.md
scripts/: populate_shattered_hourglass.py
src/: adventure.rs  app.rs  calendar.rs  canon.rs  combat.rs  dice.rs  lore.rs  main.rs  pc.rs  portrait.rs  store.rs  theme.rs
src/forge/: data.rs  encounter.rs  mod.rs  monster.rs  npc.rs  town.rs
