[package]
name = "amar"
version = "0.1.44"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Amar RPG companion: NPC/encounter/town/weather forge, campaign tracker, lore, AI inspiration. Honors d6gaming.org."
license = "Unlicense"
repository = "https://github.com/isene/amar"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
# Terminal image display (kitty / sixel / braille fallback) — used by
# the Town relationship map: graphviz writes a PNG, glow paints it
# inline in the right pane.
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# HTTP client used by both the canon scraper (build-time) and the
# main binary's portrait API calls (DALL-E 3 / Imagen). `json`
# enables ureq's serde_json integration so we can decode responses
# directly into Value.
ureq = { version = "2", features = ["tls", "json"] }

[dev-dependencies]

# Scraper-only dep — compiled lazily behind the `scraper` feature.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
regex = { version = "1", optional = true }

[features]
default = []
scraper = ["regex"]

[[bin]]
name = "amar"
path = "src/main.rs"

[[bin]]
name = "scrape_canon"
path = "src/bin/scrape_canon.rs"
required-features = ["scraper"]

[profile.release]
opt-level = 3
lto = true
